apps/admin/.turbo/turbo-build.log

> admin@0.1.0 build
> next build

▲ Next.js 16.1.6 (Turbopack)

  Creating an optimized production build ...
Error: "./base" is not exported under the condition "style" from package F:\JVP\ANTIGRAVITY\Fevrex\node_modules\tailwindcss (see exports field in F:\JVP\ANTIGRAVITY\Fevrex\node_modules\tailwindcss\package.json)
    [2m[at F:\JVP\ANTIGRAVITY\Fevrex\node_modules\enhanced-resolve\lib\ExportsFieldPlugin.js:123:7][0m
    [2m[at Hook.eval [as callAsync] (eval at create (F:\JVP\ANTIGRAVITY\Fevrex\node_modules\tapable\lib\HookCodeFactory.js:31:10), <anonymous>:22:1)][0m
    [2m[at Hook.CALL_ASYNC_DELEGATE [as _callAsync] (F:\JVP\ANTIGRAVITY\Fevrex\node_modules\tapable\lib\Hook.js:21:14)][0m
    [2m[at Resolver.doResolve (F:\JVP\ANTIGRAVITY\Fevrex\node_modules\enhanced-resolve\lib\Resolver.js:715:16)][0m
    [2m[at F:\JVP\ANTIGRAVITY\Fevrex\node_modules\enhanced-resolve\lib\DescriptionFilePlugin.js:80:17][0m
    [2m[at F:\JVP\ANTIGRAVITY\Fevrex\node_modules\enhanced-resolve\lib\DescriptionFileUtils.js:161:24][0m
    [2m[at F:\JVP\ANTIGRAVITY\Fevrex\node_modules\enhanced-resolve\lib\forEachBail.js:39:13][0m
    [2m[at onJson (F:\JVP\ANTIGRAVITY\Fevrex\node_modules\enhanced-resolve\lib\DescriptionFileUtils.js:96:6)][0m
    [2m[at F:\JVP\ANTIGRAVITY\Fevrex\node_modules\enhanced-resolve\lib\DescriptionFileUtils.js:123:7][0m
    [2m[at SyncAsyncFileSystemDecorator.readJson (F:\JVP\ANTIGRAVITY\Fevrex\node_modules\enhanced-resolve\lib\SyncAsyncFileSystemDecorator.js:204:6)][0m

> Build error occurred
Error: Turbopack build failed with 2 errors:
./apps/admin/src/app/globals.css
Error evaluating Node.js code
CssSyntaxError: tailwindcss: F:\JVP\ANTIGRAVITY\Fevrex\apps\admin\src\app\globals.css:1:1: "./base" is not exported under the condition "style" from package F:\JVP\ANTIGRAVITY\Fevrex\node_modules\tailwindcss (see exports field in F:\JVP\ANTIGRAVITY\Fevrex\node_modules\tailwindcss\package.json)
    at Input.error (node_modules/postcss/lib/input.js:135:16) [F:\JVP\ANTIGRAVITY\Fevrex\apps\admin\.next\build\chunks\node_modules_fe693df6._.js:4651:22]
    at Root.error (node_modules/postcss/lib/node.js:146:32) [F:\JVP\ANTIGRAVITY\Fevrex\apps\admin\.next\build\chunks\node_modules_fe693df6._.js:928:38]
    [at Object.Once (F:\JVP\ANTIGRAVITY\Fevrex\node_modules\@tailwindcss\postcss\dist\index.js:10:6911)]
    [at process.processTicksAndRejections (node:internal/process/task_queues:105:5)]
    at async LazyResult.runAsync (node_modules/postcss/lib/lazy-result.js:293:11) [F:\JVP\ANTIGRAVITY\Fevrex\apps\admin\.next\build\chunks\node_modules_fe693df6._.js:6206:21]
    at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34) [F:\JVP\ANTIGRAVITY\Fevrex\apps\admin\.next\build\chunks\[root-of-the-server]__3e26566f._.js:146:36]
    at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23) [F:\JVP\ANTIGRAVITY\Fevrex\apps\admin\.next\build\chunks\[root-of-the-server]__85617603._.js:443:31]

Import trace:
  Client Component Browser:
    ./apps/admin/src/app/globals.css [Client Component Browser]
    ./apps/admin/src/app/layout.tsx [Server Component]


./apps/admin/src/app/dashboard/orders/[id]/page.tsx:7:1
Module not found: Can't resolve 'lucide-react'
[0m [90m  5 |[39m [36mimport[39m { notFound } [36mfrom[39m [32m"next/navigation"[39m[33m;[39m
 [90m  6 |[39m [36mimport[39m [33mLink[39m [36mfrom[39m [32m"next/link"[39m[33m;[39m
[31m[1m>[22m[39m[90m  7 |[39m [36mimport[39m { [33mArrowLeft[39m } [36mfrom[39m [32m"lucide-react"[39m[33m;[39m
 [90m    |[39m [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m
 [90m  8 |[39m
 [90m  9 |[39m [36mexport[39m [36mconst[39m dynamic [33m=[39m [32m"force-dynamic"[39m[33m;[39m
 [90m 10 |[39m[0m



https://nextjs.org/docs/messages/module-not-found


    at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34) [F:\JVP\ANTIGRAVITY\Fevrex\apps\admin\.next\build\chunks\[root-of-the-server]__3e26566f._.js:146:36])
    at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23) [F:\JVP\ANTIGRAVITY\Fevrex\apps\admin\.next\build\chunks\[root-of-the-server]__85617603._.js:443:31])
    at <unknown> (./apps/admin/src/app/dashboard/orders/[id]/page.tsx:7:1)
    at <unknown> (https://nextjs.org/docs/messages/module-not-found)
npm error Lifecycle script `build` failed with error:
npm error code 1
npm error path F:\JVP\ANTIGRAVITY\Fevrex\apps\admin
npm error workspace admin@0.1.0
npm error location F:\JVP\ANTIGRAVITY\Fevrex\apps\admin
npm error command failed
npm error command C:\WINDOWS\system32\cmd.exe /d /s /c next build
